# mesh-capture-mapper

./: .gitignore  README.md  pyproject.toml
data/reference/: mesh_grid.csv
src/: build_grid.py  build_grid_from_image.py  cli.py  convert.py  dump_grid_geojson.py  dump_grid_kml.py  geojson_to_kml.py  grid.py  mesh_rule.py  ocr_assist.py  wareki.py
tests/: test_convert.py  test_grid.py
