[project]
name = "mesh-capture-mapper"
version = "0.1.0"
description = "雫石町 有害駆除 捕獲記録（メッシュ番号＋象限）を GeoJSON に変換する"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
# OCR 補助（任意）。tesseract 本体（brew install tesseract tesseract-lang）が別途必要。
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",  # PDF -> 画像（poppler が別途必要）
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
